Fix banner position IE11

--- a/src/sass/components/_banner.scss
+++ b/src/sass/components/_banner.scss
@@ -20,6 +20,7 @@
 	&-outer {
 		width: 100%;
 		height: 100%;
+		top: 0;
 		overflow: hidden;
 		position: absolute;
 		.icon--arrow {
